--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ python-dotenv
 pinecone[grpc]
 langchain-pinecone
 langchain_community
-langchain_openai
+langchain_cohere
 langchain_experimental
+cohere
 -e .
